--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -3,12 +3,11 @@ on:
     branches: [ master, main, develop ]
     types: [ opened, synchronize, ready_for_review, reopened, unlabeled ]
 
-name: Build application
+name: Build for Releaser
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Builds application
     if: |
       contains(github.event.pull_request.labels.*.name, 'no-deploy') == false &&
       github.event.pull_request.draft == false &&
@@ -47,7 +46,7 @@ jobs:
 #        id: issue
 #        uses: AsasInnab/regex-action@v1
 #        with:
-#          regex_pattern: '\bGW(S)?-[\d]+\b'
+#          regex_pattern: '\bGW(S|K)?-[\d]+\b'
 #          regex_flags: 'gi'
 #          search_string: ${{ github.event.pull_request.title }}
 #
@@ -66,9 +65,11 @@ jobs:
         id: file
         run: |
           issue=GWS-123
+          echo "Creating directory $issue"
           mkdir $issue
           sha=${{ github.event.pull_request.head.sha }}
           path="$issue/release-prod-$sha.zip"
+          echo "Moving compiled file to $path"
           mv dist/release-prod.zip $path
           echo "::set-output name=path::$path"
 
@@ -76,6 +77,7 @@ jobs:
         uses: koraykoska/s3-upload-github-action@master
         env:
           FILE: ${{ steps.file.outputs.path }}
+          S3_PREFIX: releaser
           S3_ENDPOINT: s3.us-east-1.amazonaws.com
           S3_BUCKET: gdoor-web-frontend-compiled
           S3_ACCESS_KEY_ID: ${{ secrets.S3_KEY_ID }}
