--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -1,5 +1,6 @@
 on:
   pull_request:
+    branches: [ develop, feature/*, main, master ]
     types: [ opened, synchronize, ready_for_review, reopened ]
 
 name: Build application
