--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -47,7 +47,7 @@ jobs:
         env:
           version: steps.issue.outputs.first_match
         run: |
-          npm version "0.0.0-$version" --no-git-tag-version
+          npm version "0.0.0" --no-git-tag-version
 
       - name: Build [prod]
         run: yarn prod -- --output-path=dist/
