--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,4 +9,5 @@ jobs:
     name: Generate release
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ toJson(github.event.pull_request) }}
+      - run: |
+          echo ${{ toJson(github.event.pull_request) }}
